k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: silph-help
  name: silph-help
spec:
  replicas: 1
  selector:
    matchLabels:
      app: silph-help
  strategy: {}
  minReadySeconds: 10
  template:
    metadata:
      labels:
        app: silph-help
    spec:
      imagePullSecrets:
      - name: hub
      containers:
      - image: silph/ticket:1.12.3-02
        imagePullPolicy: Always
        name: silph-help
        ports:
        - containerPort: 80
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
status: {}
---
apiVersion: v1
kind: Service
metadata:
  name: silph-help
  labels:
    app: silph-help
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: silph-help
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: silph-help
 annotations:
   kubernetes.io/tls-acme: "true"
spec:
 tls:
   - hosts:
      - help.silph.io
     secretName: help-tls
 rules:
   - host: help.silph.io
     http:
       paths:
         - path: /
           backend:
             serviceName: silph-help
             servicePort: 80
